2006-02-23  Ingmar Schlecht  <ingmar@typo3.org>

	* Changed formURL in fe_adminLib.inc to always contain a question mark "?" because in the templates the formurl marker is used like ###FORM_URL###&cmd=edit which didn't work if the URL didn't contain a question mark like in simulStatic- or RealURLs. This fixes typo3.org bug #2563.

2006-02-23  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Remove RTE-enabling defaultExtras off tt_content bodytext (related to bug #2023).
	* Fix bugtracker issue 2656 in htmlArea RTE.

2006-02-23  Rene Fritz  <r.fritz@colorcube.de>

	* Fixed bug #2662: added check against "Limit to languages"

2006-02-23 Kasper Skaarhoj  <kasperYYYY@typo3.com>
	* Changed things related to locallang-XML handling. Most significantly is it that translations are looked for in the new language pack directories typo3conf/l10n/[langyage key]/. 
	* All locallang-XML files are updated to have ONLY the default labels in them and no specific references to external files; means translations will work only with language packs installed in typo3conf/l10n/. Such language packs will be distributed as zip-files around the release. 
	* csh_* extensions (language pack extensions) are now obsolete.

2006-02-22  Dmitry Dulepov  <typo3@accio.lv>

	* t3libBEfunc::thumbCode() did not make proper image path under certain conditions
	* Fixed bug #2654: Incorrect conversion of non-ascii (Latvian) characters in URL

2006-02-22  Wolfgang Klinger  <wk@plan2.net>

	* Fixed bug #1596: checkIncludeLines uses preg_match now and checks for all whitespace before and after <INCLUDE_TYPOSCRIPT>
	* Fixed bug #2592: Page type "External URL" and "Shortcut" causes an error (jumpUrlX methods)

2006-02-22 Kasper Skaarhoj  <kasperYYYY@typo3.com>

	* Added 3 languages: Faroe, Serbian, Farsi
	* Fixed bug in t3lib_div::cHashParams()